--- a/src/styles/quasar.variables.scss
+++ b/src/styles/quasar.variables.scss
@@ -1,15 +1,18 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   : #027BE3;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+//$primary   : #027BE3;
+$primary: #5f19dd;
+$secondary: #26a69a;
+$accent: #9c27b0;
 
-$dark      : #1D1D1D;
+//$dark      : #1D1D1D;
+$dark: #242a3b;
+$dark-page: #191c28;
+$page: #f1f3f4;
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
-
-@import '~quasar-variables-styl'
+@import '~quasar-variables-styl';
